--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "source-map-explorer": "^2.5.1",
     "stylelint": "^13.13.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uuid": "^11.1.0"
   },
   "husky": {
     "hooks": {
